objects/CMN_ObjectShareChangeInstruction__e.object
<CustomObject>
    <description>This platform event will be fired when a record is created or updated for which Object Share configuration exists.</description>
    <fields>
        <fullName>CMN_AccessLevel__c</fullName>
        <description>Specify the Access Level to be granted: Read, Edit, All</description>
        <label>Access Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ObjectId__c</fullName>
        <description>Specify the record Id  of the object which needs to be shared, i.e. Account, Case, etc</description>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ShareWith__c</fullName>
        <description>Specify the user id who should be granted access to the records</description>
        <label>Share With</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Object Share Change Instruction</label>
    <pluralLabel>Object Share Change Instructions</pluralLabel>
</CustomObject>